      group that you are not building, conary will warn that that replace
      cannot possibly do anything, and will suggest using r.addCopy()
      to resolve the problem. (CNY-360)
    * Added r.addCopy() group command. (CNY-360)
    * The Autoconf() build action now enforces buildRequirements of
      automake:runtime and autoconf:runtime if used (CNY-672)

  o Optimizations:
    * Getting a large number of troves (without files) from the local database
      has been sped up by 30%.  (CNY-907).
    * conary q --troves is 2 times faster, conary q, conary q --deps and 
      --info  are 30% faster, and conary q --troves --recurse is 4-6 times 
      faster on a test machine.

  o Bug Fixes:
    * r.Replace() no longer fails when a glob matches a dangling
      symlink.  r.Replace() now reports that no action is taking on
      the dangling symlink due to it being a non-regular file.  This
      is the same behavior as running r.Replace() on non-dangling
      symlinks.

Changes in 1.0.32:
  o Optimizations
    * Duplicate trove instantiations have been removed. Build requires are
      no longer thawed out of abstract change sets, and methods were added
      to get dependency and path hash information directly from trove
      change set objects. These changes combined for a 50% speedup on
      update --info of a large group into an empty root and saved a few
      megs of memory as well (CNY-892)
    * The changes in the previous version of Conary in how XML-RPC
      responses are decompressed actually made Conary slower.  These
      changes have been reverted.

  o Build (cvc) Changes:
    * The Requires() policy now reads pkg-config files and converts the
      "Requires:" lines in them into trove dependencies, removing the
      need to specify those dependencies manually. (CNY-896)
    * Files in /etc/conary/macros.d/ are now loaded in sorted order
      after initial macros are read from /etc/conary/macros. (CNY-878)

  o Bug Fixes: